<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Чайка</string>
    <string name="version_name">2.0.17</string>

    <string name="seagull_name">Отображаемое имя чайки</string>
    <string name="seagull_ussd">USSD-запрос или номер для набора</string>
    <string name="seagull_order">Порядок</string>

    <string name="menu_item_seagull_from_contacts">Добавить чайку из контакта</string>
    <string name="menu_item_add_call">Добавить вызов из контакта</string>
    <string name="menu_item_settings">Добавить вручную</string>
    <string name="menu_item_add">Добавить</string>


    <string name="menu_sel_op">Выбрать оператора</string>
    <string name="menu_sel_op_summary">Необходимо для посылки «Чаек»</string>
    <string name="err_empty_op">Не выбран оператор!</string>

    <string name="help_str">\nВсе крупные операторы РФ позволяют бесплатно отправлять специальные сообщения «жду звонка» (в народе - «чайки»). \n\nНапример, чтобы отправить «чайку» с сим-карты Билайн, нужно набрать USSD-запрос вида *144*номер абонента# и нажать на кнопку вызова.\n\nЭта программа предназначена для организации быстрого доступа к «чайкам», чтобы не запоминать и не набирать длинные USSD-запросы.\n\n<b>Программа добавляет кнопку отправки «чаек» к контактам в телефоне, у которых есть хотя бы один телефонный номер.</b>\n\nДля редактирования или удаления «чайки», используйте долгое нажатие на неё.\n\nВместо USSD-запроса «чайки» можно ввести любой другой USSD-запрос (например, запрос баланса) или телефонный номер (в этом случае будет выполнен звонок абоненту по тарифу оператора).</string>

    <string name="default_seagull_name1">Баланс «Ростелеком»</string>
    <string name="default_seagull_name2">Баланс «МТС»</string>
    <string name="default_seagull_name3">Баланс «Билайн»</string>
    <string name="default_seagull_name4">Баланс «Мегафон»</string>
    <string name="default_seagull_ussd1">*105#</string>
    <string name="default_seagull_ussd2">*100#</string>
    <string name="default_seagull_ussd3">*102#</string>
    <string name="default_seagull_ussd4">*100#</string>

    <!--
    <string name="info_seagull_props">Данные чайки</string>
    -->

    <string name="save_btn_txt">Сохранить</string>
    <string name="del_btn_txt">Удалить</string>
    <string name="cancel_btn_txt">Отменить</string>
    <string name="authenticating">Добавляю «чайки» к контактам, это может занять несколько минут. Пожалуйста, подождите.</string>
    <string name="info_btn_ok">Понятно</string>

    <string name="ACCOUNT_TYPE">ru.perm.trubnikov.chayka.account</string>
    <string name="dummy_username">seagull</string>
    <string name="dummy_password">123</string>

    <string name="op1">Билайн</string>
    <string name="op2">Мегафон</string>
    <string name="op3">МТС</string>
    <string name="op4">Ростелеком</string>
    <string name="op5">TELE2</string>
    <string name="op6">Мотив</string>
    <string name="op7">Смартс</string>
    <string name="op8">НСС</string>
    <string name="op9">БайкалВестКом</string>
    <string name="op10">АКОС GSM</string>
    <string name="op11">Енисей Телеком</string>
    <string name="op12">Просто для общения</string>
    <string name="op13">МТС Украина</string>
    <string name="op14">DJUICE Украина</string>
    <string name="op15">KYIVSTAR Украина</string>
    <string name="op16">Билайн Украина</string>
    <string name="op17">Life Украина</string>
    <string name="op18">Ucell Узбекистан</string>
    <string name="op19">Билайн Узбекистан</string>
    <string name="op20">PerfectumMobile Узбекистан</string>
    <string name="op21">Velcom Беларусь</string>
    <string name="op22">Life Беларусь</string>
    <string name="op23">МТС Беларусь</string>
    <string name="op24">Ростелеком (ЕТК)</string>
    <string name="op25">Yota</string>

    <string name="header_choose_number">Выберите номер</string>

    <string name="donate_title_1">Поездка на автобусе</string>
    <string name="donate_title_2">Вкусный гамбургер</string>
    <string name="donate_title_3">Хорошее пивко</string>
    <string name="donate_title_4">Билет в кино</string>
    <string name="donate_title_5">Оплатить вечеринку! Тусэ!</string>

    <string name="donation_title">Спасибо за пожертвование!</string>
    <string name="donation_desc">
        \nВы можете помочь разработчику купить что-то из этого списка:
        \n
    </string>

    <string name="donation_already_purchased">Вы уже сделали это пожертвование! Спасибо кстати!</string>
    <string name="donation_restore_purchases">Восстановить покупки</string>
    <string name="donation_billing_not_ready">Ваша биллинговая система не подключена!</string>

    <string name="changelog_full_title">История изменений</string>
    <string name="changelog_title">Что нового</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">Еще…</string>

    <string name="pref_about">О приложении</string>
    <string name="pref_about_summary">Версия</string>
    <string name="pref_common">Основные</string>
    <string name="pref_clrs">Цвет значка трубки</string>
    <string name="pref_clrs_summary">Выберите цвет значка телефонной трубки на плитках</string>
    <string name="drawer_item_home">Чайки</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_help">Помощь</string>
    <string name="drawer_item_journal">Журнал звонков</string>
    <string name="drawer_item_rate">Оценить приложение</string>
    <string name="drawer_item_donate">Пожертвование</string>

    <string name="help_screen_header">Помощь по работе с программой</string>
    <string name="select_operator_header">Выберите вашего оператора</string>
    <string name="unknown_contact">Неизвестный номер</string>
    <string name="confirm">Подтверждение</string>
    <string name="title">Отправить «чайку» на выбранный номер?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="pref_conf_summary">При попытке послать «чайку», будет выдаваться предупреждение (защита от случайного нажатия)</string>
    <string name="pref_conf">Подтверждать посылку чайки</string>

</resources>
