<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel1"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
  
    
    <LinearLayout
       
        android:id="@+id/Linear1_"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >
        
        <TextView
		    android:id="@+id/textView1"
		    android:layout_marginLeft="8dp"
		    android:layout_marginTop="12dp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/seagull_name" />
        
    </LinearLayout>

	<LinearLayout
       
        android:id="@+id/Linear1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Linear1_"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

       <EditText
	        
	        android:id="@+id/seagull_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            
	        android:maxLength="250"
	        android:maxLines="1"
	        
            android:hint="">
	        
	     <requestFocus />
	     
	    </EditText>
       
   </LinearLayout>

	<LinearLayout
       
        android:id="@+id/Linear2_"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Linear1"
        android:orientation="horizontal" >
	
	     <TextView
		    android:id="@+id/textView2"
		    android:layout_marginLeft="8dp"
		    android:layout_marginTop="12dp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/seagull_ussd" />
	    
	 </LinearLayout>
	<LinearLayout
       
        android:id="@+id/Linear2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Linear2_"
        android:orientation="horizontal" >
        
	   
	    
       <EditText
	        
	        android:id="@+id/seagull_ussd"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            
	        android:maxLength="250"
	        android:maxLines="1"
	        
            android:hint="">
	        
	     
	    </EditText>
       
   </LinearLayout>

	
	<LinearLayout
       
        android:id="@+id/Linear3_"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Linear2"
        android:orientation="horizontal" >
       
	     <TextView
		    android:id="@+id/textView3"
		    android:layout_marginLeft="8dp"
		    android:layout_marginTop="12dp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/seagull_order" />
	    
	 </LinearLayout>	   
	<LinearLayout
       
        android:id="@+id/Linear3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Linear3_"
        android:orientation="horizontal" >
        
	   
	    
       <EditText
	        
	        android:id="@+id/seagull_order"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
			android:inputType="number"            
	        android:maxLength="6"
	        android:maxLines="1"
	        android:lines="1"
            android:hint="">
	        
	     
	    </EditText>
       
   </LinearLayout>	    

</RelativeLayout>